Colaboratory를 통해 생성됨

--- a/Sequence_to_Sequence.ipynb
+++ b/Sequence_to_Sequence.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNE32Boc7sf4OuDy2zlCmTa",
+      "authorship_tag": "ABX9TyMoEFYVFwgHJHYHjFFbgVT/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "QGTfulY5sQBW"
       },
@@ -56,9 +56,9 @@
           "height": 76
         },
         "id": "rVFsRkbBB_x9",
-        "outputId": "b9e51270-3684-4519-9295-e7ad2c0afb1c"
+        "outputId": "f8b55d84-8934-412d-f953-1f3e10d7ddd1"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -68,9 +68,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-24d3c190-8f18-4781-b71d-0a1dc6bb0b00\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-cfd912e5-f1a3-4e86-92d0-9a2b37d971a1\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-24d3c190-8f18-4781-b71d-0a1dc6bb0b00\">\n",
+              "     <output id=\"result-cfd912e5-f1a3-4e86-92d0-9a2b37d971a1\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -258,7 +258,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving fra.txt to fra (1).txt\n"
+            "Saving fra.txt to fra.txt\n"
           ]
         }
       ]
@@ -275,9 +275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K4V3KedSA8zC",
-        "outputId": "3788b545-9d32-4ce4-8128-f6ce3ad52d55"
+        "outputId": "dc69b56a-d73c-43ab-8749-d214ad6e331c"
       },
-      "execution_count": 35,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +299,9 @@
           "height": 206
         },
         "id": "OsyJtIPoBh2J",
-        "outputId": "30bf8ea7-c770-442d-a37d-0371934b6698"
+        "outputId": "4798ec8e-6d2e-4022-ab78-7add0357aab8"
       },
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-c9f10f64-7322-4649-94cc-c80feaf5910c\">\n",
+              "  <div id=\"df-628ff527-5b10-46a3-b8d5-50ab85a67aac\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -370,7 +370,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9f10f64-7322-4649-94cc-c80feaf5910c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-628ff527-5b10-46a3-b8d5-50ab85a67aac')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -383,8 +383,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-be1bd57d-06a3-4bce-a65b-27aa38033f2b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-be1bd57d-06a3-4bce-a65b-27aa38033f2b')\"\n",
+              "    <div id=\"df-ca6c7119-1cea-4db8-88d4-652a233894c1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ca6c7119-1cea-4db8-88d4-652a233894c1')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -441,7 +441,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-be1bd57d-06a3-4bce-a65b-27aa38033f2b button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-ca6c7119-1cea-4db8-88d4-652a233894c1 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -488,12 +488,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c9f10f64-7322-4649-94cc-c80feaf5910c button.colab-df-convert');\n",
+              "          document.querySelector('#df-628ff527-5b10-46a3-b8d5-50ab85a67aac button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c9f10f64-7322-4649-94cc-c80feaf5910c');\n",
+              "          const element = document.querySelector('#df-628ff527-5b10-46a3-b8d5-50ab85a67aac');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -515,7 +515,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
     },
@@ -528,7 +528,7 @@
       "metadata": {
         "id": "fB8BbLG_Db2o"
       },
-      "execution_count": 37,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -543,9 +543,9 @@
           "height": 423
         },
         "id": "paiJ71DPDoPX",
-        "outputId": "b6033d1c-9eb1-458d-e040-082216f04b2a"
+        "outputId": "ac18d442-34fa-47db-ad24-59f46a20accc"
       },
-      "execution_count": 38,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -569,7 +569,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-a74d4eb2-efeb-4bc8-b120-73fab765d0ff\">\n",
+              "  <div id=\"df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -653,7 +653,7 @@
               "</table>\n",
               "<p>60000 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a74d4eb2-efeb-4bc8-b120-73fab765d0ff')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -666,8 +666,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-dd4bb5d5-bd07-4f54-84c5-a67fe4b2517a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dd4bb5d5-bd07-4f54-84c5-a67fe4b2517a')\"\n",
+              "    <div id=\"df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -724,7 +724,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-dd4bb5d5-bd07-4f54-84c5-a67fe4b2517a button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -771,12 +771,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a74d4eb2-efeb-4bc8-b120-73fab765d0ff button.colab-df-convert');\n",
+              "          document.querySelector('#df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a74d4eb2-efeb-4bc8-b120-73fab765d0ff');\n",
+              "          const element = document.querySelector('#df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -798,7 +798,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 6
         }
       ]
     },
@@ -819,7 +819,7 @@
       "metadata": {
         "id": "RVHe4DviETnH"
       },
-      "execution_count": 39,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -835,9 +835,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSxgxwuVIbVI",
-        "outputId": "298f7219-09f4-4f88-df67-b7524654face"
+        "outputId": "650ef076-475e-4591-f7ad-7b1af12be31d"
       },
-      "execution_count": 40,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,9 +862,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_QQJUI0IoqP",
-        "outputId": "d977e49d-1183-4839-f041-275e17226073"
+        "outputId": "f922e5d0-294f-44e7-c935-91cee743a5f8"
       },
-      "execution_count": 41,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,9 +889,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xwr563a1I7TI",
-        "outputId": "ce1e0a5b-f3f0-4ab9-c46e-4f78bd694b5f"
+        "outputId": "47f4cc42-d5d1-4e43-f9b6-d726787a8738"
       },
-      "execution_count": 42,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,9 +919,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_GRYkV6HJW4w",
-        "outputId": "cbc7a5ad-4409-40cf-8cf3-9eb64954aa53"
+        "outputId": "8fe7a9e8-8a93-46c2-e2ce-df0307450d03"
       },
-      "execution_count": 43,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,9 +948,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0sVpVjBIKAgI",
-        "outputId": "adfaf54c-44a2-4ea2-a9ba-ab5aa654ad2a"
+        "outputId": "148a409a-1605-45f7-b0ac-586c02d93eae"
       },
-      "execution_count": 44,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,9 +980,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vQwZWyNhKY-g",
-        "outputId": "2b5ba865-dd0f-4a40-9023-9067bb0ba282"
+        "outputId": "bddc95ac-44f3-4f29-fb23-5b57fa41bc8f"
       },
-      "execution_count": 45,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,9 +1006,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqj_oh2GNjcY",
-        "outputId": "dea585bf-e41d-4639-d140-1f24688ab5a6"
+        "outputId": "e3878bde-4996-47be-b8d2-ff15df66fd64"
       },
-      "execution_count": 46,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1031,7 @@
       "metadata": {
         "id": "fOz3gO0sOCBA"
       },
-      "execution_count": 47,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1044,7 +1044,7 @@
       "metadata": {
         "id": "5rbBmUMzOiFw"
       },
-      "execution_count": 48,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1057,34 +1057,60 @@
       "metadata": {
         "id": "cTwvUpwzO5BY"
       },
-      "execution_count": 49,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "encoder_inputs=Input(shape=(None, src_vocab_size))\n",
-        "encoder_lstm=LSTM(units=256, return_state=True)\n",
-        "encoder_output, state_h, state_c=encoder_lstm(encoder_inputs)\n",
-        "encoder_States=[state_h,state_c] #은닉상태와 셀상태"
+        "encoder_inputs=Input(shape=(None, src_vocab_size)) #src_vocab_size만큼의 특성을 가지고 알 수 없는 시점을 가지고 들어간다.(None).\n",
+        "encoder_lstm=LSTM(units=256, return_state=True) #units=hidden_units, return_state=True이면 내부 상태를 반환한다.\n",
+        "encoder_output, state_h, state_c=encoder_lstm(encoder_inputs)#encoder_inputs와 연결하고 내부 상태를 state_h와 state_c에 저장한다.\n",
+        "encoder_states=[state_h,state_c] #은닉상태(hidden)와 셀(cell)상태 모두 디코더로 전달하기 위해 컨텍스트 벡터로 만든다."
       ],
       "metadata": {
         "id": "jybbKwOQRZyo"
       },
-      "execution_count": 50,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "decoder_inputs=Input(shape=(None, tar_vocab))\n",
-        "decoder_lstm=LSTM(units=256, return_sequences=True, return_state=True)\n",
-        "decoder_softmax_layer=Dense(tar_vocab_size, acitvation='softmax')\n",
+        "decoder_inputs=Input(shape=(None, tar_vocab_size))\n",
+        "#decoder에도 input이 있는 이유는 교사강요 : 훈련과정에서 이전 시점의 예측값이 아닌 이전 시점의 실제값을 훈련시킨다.\n",
+        "decoder_lstm=LSTM(units=256, return_sequences=True, return_state=True) #디코더의 은닉상태 크기도 인코더와 똑같이 해준다.\n",
+        "\n",
+        "#decoder에게 encoder의 은닉상태와 셀상태 전달\n",
+        "decoder_outputs, _, _=decoder_lstm(decoder_inputs, initial_state=encoder_states) #decoder_inputs와 연결하고 encoder의 층과 같은 상태를 위해 initial_state으로 state_h와 state_c(컨텍스트 벡터)를 가져와서 lstm에 저장한다. -> encoder와 decoder 레이어의 단위 크기가 같아야 한다.\n",
+        "#훈련 과정에서는 디코더의 은닉상태와 셀상태를 리턴하지 않기 때문에 변수를 따로 지정하지 않음.\n",
+        "decoder_softmax_layer=Dense(tar_vocab_size, activation='softmax')\n",
         "decoder_outputs=decoder_softmax_layer(decoder_outputs)\n",
-        "model=Model([encoder_inputs, decoder_inputs], )"
+        "model=Model([encoder_inputs, decoder_inputs], decoder_outputs) #입력은 encoder_inputs와 decoder_inputs의 병렬이고 출력은 decoder_outputs이다.\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\")"
       ],
       "metadata": {
         "id": "mPApD_COR_Go"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x=[encoder_input, decoder_input], y=decoder_target, batch_size=64, epochs=40, validation_split=0.2)"
+      ],
+      "metadata": {
+        "id": "fA3AGobmxh_g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "teBGcvaWxxAQ"
       },
       "execution_count": null,
       "outputs": []
