Colaboratory를 통해 생성됨

--- a/Sequence_to_Sequence.ipynb
+++ b/Sequence_to_Sequence.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoEFYVFwgHJHYHjFFbgVT/",
+      "authorship_tag": "ABX9TyOjsLNa9SUDn+GYbihRAVLS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "height": 76
         },
         "id": "rVFsRkbBB_x9",
-        "outputId": "f8b55d84-8934-412d-f953-1f3e10d7ddd1"
+        "outputId": "298bdfdd-ede8-4207-a25a-c5672e17d404"
       },
       "execution_count": 2,
       "outputs": [
@@ -68,9 +68,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-cfd912e5-f1a3-4e86-92d0-9a2b37d971a1\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-8793217c-4dea-4660-b3ea-3f6de310efc3\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-cfd912e5-f1a3-4e86-92d0-9a2b37d971a1\">\n",
+              "     <output id=\"result-8793217c-4dea-4660-b3ea-3f6de310efc3\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -275,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K4V3KedSA8zC",
-        "outputId": "dc69b56a-d73c-43ab-8749-d214ad6e331c"
+        "outputId": "f42989d5-79f7-42b5-e758-c64a2cdb26ee"
       },
       "execution_count": 3,
       "outputs": [
@@ -299,7 +299,7 @@
           "height": 206
         },
         "id": "OsyJtIPoBh2J",
-        "outputId": "4798ec8e-6d2e-4022-ab78-7add0357aab8"
+        "outputId": "b476b575-a045-48fe-ca56-46bc4b43fc4e"
       },
       "execution_count": 4,
       "outputs": [
@@ -317,7 +317,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-628ff527-5b10-46a3-b8d5-50ab85a67aac\">\n",
+              "  <div id=\"df-c5ad5bcb-64ff-4ae7-a6c9-28678aad3010\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -370,7 +370,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-628ff527-5b10-46a3-b8d5-50ab85a67aac')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5ad5bcb-64ff-4ae7-a6c9-28678aad3010')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -383,8 +383,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-ca6c7119-1cea-4db8-88d4-652a233894c1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ca6c7119-1cea-4db8-88d4-652a233894c1')\"\n",
+              "    <div id=\"df-e22282fa-e731-4f24-99c5-b17e40df4f7a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e22282fa-e731-4f24-99c5-b17e40df4f7a')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -441,7 +441,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-ca6c7119-1cea-4db8-88d4-652a233894c1 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-e22282fa-e731-4f24-99c5-b17e40df4f7a button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -488,12 +488,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-628ff527-5b10-46a3-b8d5-50ab85a67aac button.colab-df-convert');\n",
+              "          document.querySelector('#df-c5ad5bcb-64ff-4ae7-a6c9-28678aad3010 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-628ff527-5b10-46a3-b8d5-50ab85a67aac');\n",
+              "          const element = document.querySelector('#df-c5ad5bcb-64ff-4ae7-a6c9-28678aad3010');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -543,7 +543,7 @@
           "height": 423
         },
         "id": "paiJ71DPDoPX",
-        "outputId": "ac18d442-34fa-47db-ad24-59f46a20accc"
+        "outputId": "58124177-2fa6-4e11-9816-a719f82832b5"
       },
       "execution_count": 6,
       "outputs": [
@@ -569,7 +569,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e\">\n",
+              "  <div id=\"df-08e9ab1a-c96a-4ab3-9027-3639daae1c1a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -653,7 +653,7 @@
               "</table>\n",
               "<p>60000 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-08e9ab1a-c96a-4ab3-9027-3639daae1c1a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -666,8 +666,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a')\"\n",
+              "    <div id=\"df-da8c6486-593c-4b6b-9d25-39623857c994\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da8c6486-593c-4b6b-9d25-39623857c994')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -724,7 +724,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-15e10cf3-9e3e-4e87-8ad3-22cfadf1ae4a button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-da8c6486-593c-4b6b-9d25-39623857c994 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -771,12 +771,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e button.colab-df-convert');\n",
+              "          document.querySelector('#df-08e9ab1a-c96a-4ab3-9027-3639daae1c1a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e01f3ffc-fca0-4e84-9429-71a6be14ee4e');\n",
+              "          const element = document.querySelector('#df-08e9ab1a-c96a-4ab3-9027-3639daae1c1a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -835,7 +835,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSxgxwuVIbVI",
-        "outputId": "650ef076-475e-4591-f7ad-7b1af12be31d"
+        "outputId": "d72a6382-ffa7-43f3-8dac-fba3a7719508"
       },
       "execution_count": 8,
       "outputs": [
@@ -862,7 +862,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_QQJUI0IoqP",
-        "outputId": "f922e5d0-294f-44e7-c935-91cee743a5f8"
+        "outputId": "40b66716-603a-4846-dfa7-63e76f229329"
       },
       "execution_count": 9,
       "outputs": [
@@ -889,7 +889,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xwr563a1I7TI",
-        "outputId": "47f4cc42-d5d1-4e43-f9b6-d726787a8738"
+        "outputId": "4e35fb1c-0f13-4508-e378-7042f8888e2f"
       },
       "execution_count": 10,
       "outputs": [
@@ -919,7 +919,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_GRYkV6HJW4w",
-        "outputId": "8fe7a9e8-8a93-46c2-e2ce-df0307450d03"
+        "outputId": "8b0862da-498c-4b67-af64-63cc98da34dc"
       },
       "execution_count": 11,
       "outputs": [
@@ -948,7 +948,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0sVpVjBIKAgI",
-        "outputId": "148a409a-1605-45f7-b0ac-586c02d93eae"
+        "outputId": "ffd2ed95-89e8-4496-c61e-0b9d8634ecd7"
       },
       "execution_count": 12,
       "outputs": [
@@ -980,7 +980,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vQwZWyNhKY-g",
-        "outputId": "bddc95ac-44f3-4f29-fb23-5b57fa41bc8f"
+        "outputId": "5f445274-770a-4a95-fc90-d22857addee9"
       },
       "execution_count": 13,
       "outputs": [
@@ -1006,7 +1006,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqj_oh2GNjcY",
-        "outputId": "e3878bde-4996-47be-b8d2-ff15df66fd64"
+        "outputId": "eadd4558-7187-4485-e975-4cbbcfed27f0"
       },
       "execution_count": 14,
       "outputs": [
@@ -1071,7 +1071,7 @@
       "metadata": {
         "id": "jybbKwOQRZyo"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1092,7 +1092,7 @@
       "metadata": {
         "id": "mPApD_COR_Go"
       },
-      "execution_count": 25,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1101,7 +1101,147 @@
         "model.fit(x=[encoder_input, decoder_input], y=decoder_target, batch_size=64, epochs=40, validation_split=0.2)"
       ],
       "metadata": {
-        "id": "fA3AGobmxh_g"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fA3AGobmxh_g",
+        "outputId": "ec5b3b34-30e4-429b-c2f6-693043d1d577"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/40\n",
+            "750/750 [==============================] - 461s 610ms/step - loss: 0.8580 - val_loss: 0.7870\n",
+            "Epoch 2/40\n",
+            "750/750 [==============================] - 393s 524ms/step - loss: 0.5904 - val_loss: 0.6882\n",
+            "Epoch 3/40\n",
+            "750/750 [==============================] - 423s 565ms/step - loss: 0.5180 - val_loss: 0.6173\n",
+            "Epoch 4/40\n",
+            "750/750 [==============================] - 392s 523ms/step - loss: 0.4698 - val_loss: 0.5651\n",
+            "Epoch 5/40\n",
+            "750/750 [==============================] - 403s 537ms/step - loss: 0.4311 - val_loss: 0.5349\n",
+            "Epoch 6/40\n",
+            "750/750 [==============================] - 445s 594ms/step - loss: 0.4033 - val_loss: 0.5016\n",
+            "Epoch 7/40\n",
+            "750/750 [==============================] - 446s 595ms/step - loss: 0.3819 - val_loss: 0.4815\n",
+            "Epoch 8/40\n",
+            "750/750 [==============================] - 411s 548ms/step - loss: 0.3647 - val_loss: 0.4646\n",
+            "Epoch 9/40\n",
+            "750/750 [==============================] - 389s 519ms/step - loss: 0.3505 - val_loss: 0.4505\n",
+            "Epoch 10/40\n",
+            "417/750 [===============>..............] - ETA: 3:15 - loss: 0.3403"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#동작할 때는 디코더의 은닉 상태와 셀 상태가 필요하다\n",
+        "encoder_model=Model(inputs=encoder_inputs, outputs=encoder_states)"
+      ],
+      "metadata": {
+        "id": "teBGcvaWxxAQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#이전 시점의 상태들을 저장할 텐서\n",
+        "decoder_state_input_h=Input(shape=(256,))\n",
+        "decoder_state_input_c=Input(shape=(256,))\n",
+        "decoder_state_inputs=[decoder_state_input_h, decoder_state_input_c]\n",
+        "\n",
+        "#문장의 다음 단어 예측을 위해 초기 상태(initial_state)를 이전 시점의 상태로 사용\n",
+        "decoder_outputs, state_h, state_c=decoder_lstm(decoder_inputs, initial_state=decoder_state_inputs)\n",
+        "\n",
+        "#훈련 과정과는 다르게 LSTM이 리턴하는 은닉상태와 셀 상태를 버리지 않음\n",
+        "decoder_states=[state_h, state_c]\n",
+        "decoder_outputs=decoder_softmax_layer(decoder_outputs)\n",
+        "decoder_model=Model(inputs=[decoder_inputs]+decoder_state_inputs, outputs=[decoder_outputs]+decoder_states)\n"
+      ],
+      "metadata": {
+        "id": "840-zNBT1nRY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "index_to_src=dict((i, char) for char, i in src_to_index.items())\n",
+        "index_to_tar=dict((i, char)for char, i in tar_to_index.items())"
+      ],
+      "metadata": {
+        "id": "c_Kt5Blt14Kn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def decode_sequence(input_seq):\n",
+        "  #입력한 후 인코더의 상태를 얻음\n",
+        "  states_value=encoder_model.predict(input_seq)\n",
+        "\n",
+        "  #<SOS>에 해당하는 원-핫 벡터 생성 -> \\t의 원핫벡터만 따로 생성\n",
+        "  target_seq=np.zeros((1,1,tar_vocab_size))\n",
+        "  target_seq[0,0,tar_to_index['\\t']]=1.\n",
+        "\n",
+        "  stop_condition=False\n",
+        "  decoded_sentence=\"\"\n",
+        "\n",
+        "  #stop_condition이 True가 될때까지 루프 반복\n",
+        "  while not stop_condition:\n",
+        "    #이전 시점의 상태 states_value(encoder의 은닉상태와 셀상태)를 현 시점의 초기 상태로 사용\n",
+        "    output_tokens, h, c=decoder_model.predict([target_seq]+states_value) #이전 시점의 예측 결과와 인코더의 이전 시점의 상태로 디코더의 예측과 은닉상태, 셀상태를 저장.\n",
+        "\n",
+        "    #예측 결과를 문자로 변환\n",
+        "    sampled_token_index=np.argmax(output_tokens[0,-1,:])\n",
+        "    sampled_char=index_to_tar[sampled_token_index]\n",
+        "\n",
+        "    #현재 시점의 예측 문자를 예측 문장에 추가\n",
+        "    decoded_sentence+=sampled_char\n",
+        "\n",
+        "    #<eos>에 도달하거나 최대 길이를 넘으면 중단\n",
+        "    if(sampled_char=='\\n' or len(decoded_sentence)>max_tar_len):\n",
+        "      stop_condition=True\n",
+        "\n",
+        "    #현재 시점의 예측 결과를 다음 시점의 입력으로 사용하기 위해 저장\n",
+        "    target_seq=np.zeros((1,1,tar_vocab_size))\n",
+        "    target_seq[0,0,sampled_token_index]=1.\n",
+        "\n",
+        "    #현재 시점의 상태를 다음 시점의 상태로 사용하기 위해 저장\n",
+        "    states_value=[h,c]\n",
+        "\n",
+        "  return decoded_sentence"
+      ],
+      "metadata": {
+        "id": "VeGxa3td9Ief"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for seq_index in [3,50,100,300,1001]:\n",
+        "  input_seq=encoder_input[seq_index:seq_index+1]\n",
+        "  decoded_sentence=decode_sequence(input_seq)\n",
+        "  print(35*\"-\")\n",
+        "  print('입력 문장 : ', lines.src[seq_index])\n",
+        "  print('정답 문장 : ', lines.tar[seq_index][2:len(lines.tar[seq_index])-1]) # '\\t'와 '\\n'을 빼고 출력\n",
+        "  print('번역 문장 : ', decoded_sentence[1:len(decoded_sentence)-1]) #'\\n'을 빼고 출력\n",
+        ""
+      ],
+      "metadata": {
+        "id": "NHoiqlJPAgvr"
       },
       "execution_count": null,
       "outputs": []
@@ -1110,7 +1250,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "teBGcvaWxxAQ"
+        "id": "nbpXGcrpEK5q"
       },
       "execution_count": null,
       "outputs": []
