--- a/Sequence_to_Sequence.ipynb
+++ b/Sequence_to_Sequence.ipynb
@@ -1107,7 +1107,7 @@
         "id": "fA3AGobmxh_g",
         "outputId": "ec5b3b34-30e4-429b-c2f6-693043d1d577"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,8 +1132,78 @@
             "Epoch 9/40\n",
             "750/750 [==============================] - 389s 519ms/step - loss: 0.3505 - val_loss: 0.4505\n",
             "Epoch 10/40\n",
-            "417/750 [===============>..............] - ETA: 3:15 - loss: 0.3403"
+            "750/750 [==============================] - 438s 585ms/step - loss: 0.3386 - val_loss: 0.4372\n",
+            "Epoch 11/40\n",
+            "750/750 [==============================] - 391s 522ms/step - loss: 0.3281 - val_loss: 0.4307\n",
+            "Epoch 12/40\n",
+            "750/750 [==============================] - 390s 520ms/step - loss: 0.3188 - val_loss: 0.4198\n",
+            "Epoch 13/40\n",
+            "750/750 [==============================] - 393s 524ms/step - loss: 0.3104 - val_loss: 0.4110\n",
+            "Epoch 14/40\n",
+            "750/750 [==============================] - 397s 529ms/step - loss: 0.3030 - val_loss: 0.4053\n",
+            "Epoch 15/40\n",
+            "750/750 [==============================] - 393s 524ms/step - loss: 0.2963 - val_loss: 0.3993\n",
+            "Epoch 16/40\n",
+            "750/750 [==============================] - 399s 532ms/step - loss: 0.2900 - val_loss: 0.3938\n",
+            "Epoch 17/40\n",
+            "750/750 [==============================] - 400s 533ms/step - loss: 0.2842 - val_loss: 0.3875\n",
+            "Epoch 18/40\n",
+            "750/750 [==============================] - 401s 534ms/step - loss: 0.2789 - val_loss: 0.3840\n",
+            "Epoch 19/40\n",
+            "750/750 [==============================] - 392s 523ms/step - loss: 0.2740 - val_loss: 0.3797\n",
+            "Epoch 20/40\n",
+            "750/750 [==============================] - 392s 522ms/step - loss: 0.2692 - val_loss: 0.3765\n",
+            "Epoch 21/40\n",
+            "750/750 [==============================] - 400s 534ms/step - loss: 0.2648 - val_loss: 0.3747\n",
+            "Epoch 22/40\n",
+            "750/750 [==============================] - 400s 533ms/step - loss: 0.2606 - val_loss: 0.3725\n",
+            "Epoch 23/40\n",
+            "750/750 [==============================] - 393s 524ms/step - loss: 0.2566 - val_loss: 0.3716\n",
+            "Epoch 24/40\n",
+            "750/750 [==============================] - 392s 522ms/step - loss: 0.2530 - val_loss: 0.3658\n",
+            "Epoch 25/40\n",
+            "750/750 [==============================] - 402s 536ms/step - loss: 0.2494 - val_loss: 0.3653\n",
+            "Epoch 26/40\n",
+            "750/750 [==============================] - 392s 523ms/step - loss: 0.2460 - val_loss: 0.3625\n",
+            "Epoch 27/40\n",
+            "750/750 [==============================] - 394s 525ms/step - loss: 0.2428 - val_loss: 0.3614\n",
+            "Epoch 28/40\n",
+            "750/750 [==============================] - 391s 522ms/step - loss: 0.2397 - val_loss: 0.3610\n",
+            "Epoch 29/40\n",
+            "750/750 [==============================] - 392s 522ms/step - loss: 0.2367 - val_loss: 0.3589\n",
+            "Epoch 30/40\n",
+            "750/750 [==============================] - 393s 524ms/step - loss: 0.2340 - val_loss: 0.3576\n",
+            "Epoch 31/40\n",
+            "750/750 [==============================] - 392s 523ms/step - loss: 0.2313 - val_loss: 0.3570\n",
+            "Epoch 32/40\n",
+            "750/750 [==============================] - 392s 523ms/step - loss: 0.2286 - val_loss: 0.3548\n",
+            "Epoch 33/40\n",
+            "750/750 [==============================] - 388s 518ms/step - loss: 0.2260 - val_loss: 0.3536\n",
+            "Epoch 34/40\n",
+            "750/750 [==============================] - 390s 521ms/step - loss: 0.2236 - val_loss: 0.3539\n",
+            "Epoch 35/40\n",
+            "750/750 [==============================] - 391s 521ms/step - loss: 0.2213 - val_loss: 0.3538\n",
+            "Epoch 36/40\n",
+            "750/750 [==============================] - 398s 530ms/step - loss: 0.2189 - val_loss: 0.3524\n",
+            "Epoch 37/40\n",
+            "750/750 [==============================] - 390s 521ms/step - loss: 0.2166 - val_loss: 0.3512\n",
+            "Epoch 38/40\n",
+            "750/750 [==============================] - 390s 520ms/step - loss: 0.2145 - val_loss: 0.3526\n",
+            "Epoch 39/40\n",
+            "750/750 [==============================] - 391s 522ms/step - loss: 0.2124 - val_loss: 0.3515\n",
+            "Epoch 40/40\n",
+            "750/750 [==============================] - 390s 520ms/step - loss: 0.2103 - val_loss: 0.3527\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f62056bbac0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
@@ -1146,7 +1216,7 @@
       "metadata": {
         "id": "teBGcvaWxxAQ"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1168,7 +1238,7 @@
       "metadata": {
         "id": "840-zNBT1nRY"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1180,7 +1250,7 @@
       "metadata": {
         "id": "c_Kt5Blt14Kn"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1225,7 +1295,7 @@
       "metadata": {
         "id": "VeGxa3td9Ief"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1241,10 +1311,128 @@
         ""
       ],
       "metadata": {
-        "id": "NHoiqlJPAgvr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NHoiqlJPAgvr",
+        "outputId": "da840fe9-d926-42dc-d08f-b2b2b0736d6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 32ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 29ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "-----------------------------------\n",
+            "입력 문장 :  Go.\n",
+            "정답 문장 :  ouge !\n",
+            "번역 문장 :  ontinue.\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 52ms/step\n",
+            "1/1 [==============================] - 0s 38ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 38ms/step\n",
+            "1/1 [==============================] - 0s 37ms/step\n",
+            "1/1 [==============================] - 0s 45ms/step\n",
+            "1/1 [==============================] - 0s 40ms/step\n",
+            "1/1 [==============================] - 0s 40ms/step\n",
+            "1/1 [==============================] - 0s 49ms/step\n",
+            "1/1 [==============================] - 0s 35ms/step\n",
+            "1/1 [==============================] - 0s 36ms/step\n",
+            "1/1 [==============================] - 0s 36ms/step\n",
+            "1/1 [==============================] - 0s 34ms/step\n",
+            "-----------------------------------\n",
+            "입력 문장 :  Hello!\n",
+            "정답 문장 :  onjour !\n",
+            "번역 문장 :  ucun avec moi.\n",
+            "1/1 [==============================] - 0s 43ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 37ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 47ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 36ms/step\n",
+            "1/1 [==============================] - 0s 41ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "-----------------------------------\n",
+            "입력 문장 :  Got it!\n",
+            "정답 문장 :  'ai pigé !\n",
+            "번역 문장 :  étends !\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 32ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 22ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "-----------------------------------\n",
+            "입력 문장 :  Go home.\n",
+            "정답 문장 :  entre à la maison.\n",
+            "번역 문장 :  a te prendre un peu de temps !\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 24ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "1/1 [==============================] - 0s 30ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "-----------------------------------\n",
+            "입력 문장 :  Get going.\n",
+            "정답 문장 :  n avant.\n",
+            "번역 문장 :  éparez-vous.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
